client firt layout

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,24 @@
 {
 	"cSpell.ignoreWords": [
+		"Adornment",
+		"Card",
+		"Gallery",
+		"Learn",
 		"Podria",
 		"Topology",
 		"Unified",
+		"Vitals",
 		"Writes",
 		"dema",
 		"hare",
+		"lable",
 		"majority",
+		"measuring",
 		"mongodb",
 		"nico",
+		"outlined",
 		"seccion",
+		"startadornment",
 		"successfully"
 	]
 }
