chetch data and render cards

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,14 @@
 		"Unified",
 		"Vitals",
 		"Writes",
+		"card",
+		"card's",
+		"cover",
+		"danger",
 		"dema",
 		"hare",
 		"lable",
+		"lighter",
 		"majority",
 		"measuring",
 		"mongodb",
@@ -19,6 +24,7 @@
 		"outlined",
 		"production",
 		"seccion",
+		"somewhere",
 		"startadornment",
 		"successfully"
 	]
