Add component layout

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,11 +9,13 @@
 		"Unified",
 		"Vitals",
 		"Writes",
+		"accordion",
 		"card",
 		"card's",
 		"cover",
 		"danger",
 		"dema",
+		"expanded",
 		"hare",
 		"lable",
 		"lighter",
