edit component en options component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,12 @@
 		"Adornment",
 		"Card",
 		"Gallery",
+		"Jacket",
 		"Learn",
 		"Podria",
+		"Shorts",
 		"Topology",
+		"Trousers",
 		"Unified",
 		"Vitals",
 		"Writes",
@@ -26,6 +29,7 @@
 		"outlined",
 		"production",
 		"seccion",
+		"shirt",
 		"somewhere",
 		"startadornment",
 		"successfully"
