loading place holder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
 		"danger",
 		"dema",
 		"expanded",
+		"glow",
 		"hare",
 		"lable",
 		"lighter",
@@ -32,6 +33,7 @@
 		"shirt",
 		"somewhere",
 		"startadornment",
-		"successfully"
+		"successfully",
+		"tabindex"
 	]
 }
